reduce width for codenvy’s version table
Signed-off-by: Stevan Le Meur <stevan.lemeur@gmail.com>

--- a/src/main/_docs/index.html
+++ b/src/main/_docs/index.html
@@ -36,26 +36,28 @@ permalink: /:categories/
   </section><!-- /quickstart -->
 </section>
 
-<section class="features">
-  <div class="unit whole center-on-mobiles">
-    <table>
-      <tr>
-        <th>Codenvy Version</th>
-      </tr>
-      <tr>
-        <td><a href="docs/">5.0.0</a></td>
-      </tr>
-      <tr>
-        <td><a href="">Nightly</a></td>
-      </tr>
-      <tr>
-        <td><a href="http://codenvy.readme.io/">5.0.0-M8 (pre-release)</a></td>
-      </tr>
-      <tr>
-        <td><a href="http://codenvy.readme.io/v4.7">4.7</a></td>
-      </tr>
-    </table>
-  </div> <!-- /unit whole center-on-mobiles -->
+<section class="versions-table">
+  <div class="grid">
+    <div class="unit half center-on-mobiles">
+      <table>
+        <tr>
+          <th>Codenvy Version</th>
+        </tr>
+        <tr>
+          <td><a href="docs/">5.0.0</a></td>
+        </tr>
+        <tr>
+          <td><a href="">Nightly</a></td>
+        </tr>
+        <tr>
+          <td><a href="http://codenvy.readme.io/">5.0.0-M8 (pre-release)</a></td>
+        </tr>
+        <tr>
+          <td><a href="http://codenvy.readme.io/v4.7">4.7</a></td>
+        </tr>
+      </table>
+    </div> <!-- /unit whole center-on-mobiles -->
+  </div>
 </section>
 
 <section class="features">
