--- a/src/main/_docs/index.html
+++ b/src/main/_docs/index.html
@@ -39,23 +39,12 @@ permalink: /:categories/
 <section class="versions-table">
   <div class="grid">
     <div class="unit half center-on-mobiles">
-      <table>
-        <tr>
-          <th>Codenvy Version</th>
-        </tr>
-        <tr>
-          <td><a href="docs/">5.0.0</a></td>
-        </tr>
-        <tr>
-          <td><a href="">Nightly</a></td>
-        </tr>
-        <tr>
-          <td><a href="http://codenvy.readme.io/">5.0.0-M8 (pre-release)</a></td>
-        </tr>
-        <tr>
-          <td><a href="http://codenvy.readme.io/v4.7">4.7</a></td>
-        </tr>
-      </table>
+      <h2>Codenvy Versions</h2>
+      <p><a href="">Latest</a></p>
+      <p><a href="">Nightly</a></p>
+      <p><a href="">5.0.0</a></p>
+      <p><a href="http://codenvy.readme.io/">5.0.0-M8 (pre-release milestone)</a></p>
+      <p><a href="http://codenvy.readme.io/v4.7">4.7</a></p>
     </div> <!-- /unit whole center-on-mobiles -->
   </div>
 </section>
