--- a/src/main/_docs/index.html
+++ b/src/main/_docs/index.html
@@ -40,11 +40,13 @@ permalink: /:categories/
   <div class="grid">
     <div class="unit half center-on-mobiles">
       <h2>Codenvy Versions</h2>
-      <p><a href="">Latest</a></p>
-      <p><a href="">Nightly</a></p>
-      <p><a href="">5.0.0</a></p>
-      <p><a href="http://codenvy.readme.io/">5.0.0-M8 (pre-release milestone)</a></p>
-      <p><a href="http://codenvy.readme.io/v4.7">4.7</a></p>
+      <p>
+          <a href="">Latest</a><br>
+          <a href="">Nightly</a><br>
+          <a href="">5.0.0</a><br>
+          <a href="http://codenvy.readme.io/">5.0.0-M8 (pre-release milestone)</a><br>
+          <a href="http://codenvy.readme.io/v4.7">4.7</a>
+      </p>
     </div> <!-- /unit whole center-on-mobiles -->
   </div>
 </section>
