--- a/src/main/_docs/index.html
+++ b/src/main/_docs/index.html
@@ -15,45 +15,40 @@ permalink: /docs/
   </div> <!-- /grid -->
 </section> <!-- /intro -->
 
-<section class="quickstart">
-  <div class="grid">
-    <div class="unit golden-large code">
-      <p class="title">Quick-Start</p>
-      <div class="shell">
-        <p class="line">
-          <span class="prompt">$</span>
-          <span class="command">docker run codenvy/cli start</span>
-        </p>
-        <p class="line">
-          <span class="prompt">#</span>
-          <span class="command">this command will guide you through the Codenvy setup.</span>
-        </p>
-      </div> <!-- /shell -->
-    </div> <!-- /unit golden-large code -->
-    <div class="clear"></div>
-  </div> <!-- /grid -->
-</section><!-- /quickstart -->
+<section class="quickstart-container">
+  <section class="quickstart">
+    <div class="grid">
+      <div class="unit golden-large code">
+        <p class="title">Quick-Start</p>
+        <div class="shell">
+          <p class="line">
+            <span class="prompt">$</span>
+            <span class="command">docker run codenvy/cli start</span>
+          </p>
+          <p class="line">
+            <span class="prompt">#</span>
+            <span class="output">this command will guide you through the Codenvy setup.</span>
+          </p>
+        </div> <!-- /shell -->
+      </div> <!-- /unit golden-large code -->
+      <div class="clear"></div>
+    </div> <!-- /grid -->
+  </section><!-- /quickstart -->
+</section>
 
-<section class="features">
-  <div class="unit whole center-on-mobiles">
-    <table>
-      <tr>
-        <th>Codenvy Version</th>
-      </tr>
-      <tr>
-        <td><a href="docs/">5.0.0</a></td>
-      </tr>
-      <tr>
-        <td><a href="">Nightly</a></td>
-      </tr>
-      <tr>
-        <td><a href="http://codenvy.readme.io/">5.0.0-M8 (pre-release)</a></td>
-      </tr>
-      <tr>
-        <td><a href="http://codenvy.readme.io/v4.7">4.7</a></td>
-      </tr>
-    </table>
-  </div> <!-- /unit whole center-on-mobiles -->
+<section class="versions-table">
+  <div class="grid">
+    <div class="unit half center-on-mobiles">
+      <h2>Codenvy Versions</h2>
+      <p>
+          <a href="">Latest</a><br>
+          <a href="">Nightly</a><br>
+          <a href="">5.0.0</a><br>
+          <a href="http://codenvy.readme.io/">5.0.0-M8 (pre-release milestone)</a><br>
+          <a href="http://codenvy.readme.io/v4.7">4.7</a>
+      </p>
+    </div> <!-- /unit whole center-on-mobiles -->
+  </div>
 </section>
 
 <section class="features">
@@ -62,49 +57,56 @@ permalink: /docs/
       <h2>One-click Docker Environments</h2>
       <p>Create multi-machine workspaces with production runtimes containing your source code and dev tools. Choose any architecture - we excel at complex topologies.</p>
       <h4>Capabilties</h4>
-        <p>• Workspace Automation<br>
-        • Docker Runtimes<br>
-        • Multi-Machine Runtimes<br>
-        • Root Access Terminal<br>
-        • Language Servers<br>
-        • Workspace Agents<br>
-        • Commands<br>
-        • Debuggers<br>
-        • Workspace Snapshots<br>
-        • Eclipse Che Browser IDE<br>
-        • Local IDE Mount</p>
+        <p>
+          • Workspace Automation<br>
+          • Docker Runtimes<br>
+          • Multi-Machine Runtimes<br>
+          • Root Access Terminal<br>
+          • Language Servers<br>
+          • Workspace Agents<br>
+          • Commands<br>
+          • Debuggers<br>
+          • Workspace Snapshots<br>
+          • Eclipse Che Browser IDE<br>
+          • Local IDE Mount
+        </p>
     </div> <!-- /unit one-third -->
     <div class="unit one-third">
-      <h2>Team onboarding and collaboration</h3>
+      <h2>Team onboarding and collaboration</h2>
       <p>Onboard teams with powerful collaboration, workspace automation, and permissions. Devs can use their local IDE or the gorgeous Eclipse Che cloud IDE.</p>
       <h4>Capabilties</h4>
-        <p>• Team Workspaces<br>
-        • Workspace Onboarding<br>
-        • Pre-Commit Feedback</br>
-        • Shared Runtime Stacks<br>
-        • Team Commands<br>
-        • Project Samples<br>
-        • Team Invites<br>
-        • Permissions<br>
-        • Collaboration</br>
+        <p>
+          • Team Workspaces<br>
+          • Workspace Onboarding<br>
+          • Pre-Commit Feedback</br>
+          • Shared Runtime Stacks<br>
+          • Team Commands<br>
+          • Project Samples<br>
+          • Team Invites<br>
+          • Permissions<br>
+          • Collaboration
+        </p>
     </div> <!-- /unit one-third -->
     <div class="unit one-third">
       <h2>Workspace platform for DevOps</h2>
       <p>Manage workspaces at scale with programmable and customizable infrastructure that lets you control system performance, availability, and functionality.</p>
       <h4>Capabilties</h4>
-        <p>• LDAP Integration<br>
-        • Resource Caps<br>
-        • Private Toolchain Integrations<br>
-        • Auditing & Analytics<br>
-        • Clustering<br>
-        • Monitoring<br>
-        • Upgrade Control<br>
-        • Domain Customization<br>
-        • Backup & Recovery<br>
-        • Plugin Management<br>
-        • APIs</p>
+        <p>
+          • LDAP Integration<br>
+          • Resource Caps<br>
+          • Private Toolchain Integrations<br>
+          • Auditing & Analytics<br>
+          • Clustering<br>
+          • Monitoring<br>
+          • Upgrade Control<br>
+          • Domain Customization<br>
+          • Backup & Recovery<br>
+          • Plugin Management<br>
+          • APIs
+        </p>
+        <br>
+        <br>
     </div> <!-- /unit one-third -->
     <div class="clear"></div>
   </div> <!-- /grid -->
 </section> <!-- /features -->
-
